<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/ic_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/ic_question"
        android:icon="@drawable/ic_question"
        android:title="@string/question" />

    <item
        android:id="@+id/ic_account"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />
</menu>

    <!--<?xml version="1.0" encoding="utf-8"?>-->
    <!--<menu xmlns:android="http://schemas.android.com/apk/res/android">-->
    <!--    <item-->
    <!--        android:id="@+id/question"-->
    <!--        android:icon="@drawable/ic_baseline_question_mark_24"-->
    <!--        android:title="Question"/>-->
    <!--    <item-->
    <!--        android:id="@+id/chat"-->
    <!--        android:icon="@drawable/ic_baseline_chat_24"-->
    <!--        android:title="Chat"/>-->
    <!--    <item-->
    <!--        android:id="@+id/profile"-->
    <!--        android:icon="@drawable/ic_baseline_person_24"-->
    <!--        android:title="Profile"/>-->
    <!--</menu>-->