<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="0dp">

    <TextView
        android:id="@+id/tvTutorialID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:text="XXX" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/greyframe"
        android:paddingBottom="20dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/tvTutorialTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="@color/tertiary"
            android:gravity="center"
            android:text="@string/tutorialname"
            android:textColor="@color/text_primary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTutorialContent"
            android:layout_width="339dp"
            android:layout_height="85dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="26dp"
            android:justificationMode="@color/text_secondary"
            android:text="@string/tutorial"
            android:textColor="#050000"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvuserName" />

        <TextView
            android:id="@+id/tvuserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/username"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTutorialTitle" />

        <TextView
            android:id="@+id/tvTutorialDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/date"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvTutorialTime"
            app:layout_constraintEnd_toStartOf="@+id/tvTutorialTime"
            app:layout_constraintTop_toTopOf="@+id/tvTutorialTime"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/tvTutorialTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/time"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTutorialTitle" />

        <ImageView
            android:id="@+id/imgTutorialImage"
            android:layout_width="339dp"
            android:layout_height="211dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="26dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTutorialContent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>