<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- TODO: Update blank fragment layout -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            tools:context=".addTutorial">

            <ImageButton

                android:id="@+id/addActPicBtn"
                android:layout_width="129dp"
                android:layout_height="52dp"
                android:layout_marginStart="141dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="141dp"
                android:foregroundGravity="center"
                android:src="@android:drawable/ic_menu_gallery"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgAddTutorialImage"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/btnPostTutorial"
                android:layout_width="97dp"
                android:layout_height="48dp"
                android:layout_marginStart="157dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="157dp"
                android:backgroundTint="#3F51B5"
                android:foregroundGravity="center"
                android:text="@string/post"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addActPicBtn" />

            <ScrollView
                android:id="@+id/scrollView4"
                android:layout_width="360dp"
                android:layout_height="249dp"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.484"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtTutorialTitle">

                <EditText
                    android:id="@+id/edtTutorialDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/put_your_contents_here"
                    android:inputType="textMultiLine"
                    android:minHeight="48dp"
                    android:textColor="#000000" />
            </ScrollView>

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="131dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="131dp"
                android:text="@string/add_tutorial"
                android:textColor="#3F51B5"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edtTutorialTitle"
                android:layout_width="360dp"
                android:layout_height="73dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:foregroundGravity="center"
                android:hint="@string/add_tutorial_title_max_100_characters"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:maxLength="100"
                android:minHeight="48dp"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView19" />

            <ImageView
                android:id="@+id/imgAddTutorialImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="141dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="142dp"
                android:foregroundGravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scrollView4"
                tools:srcCompat="@tools:sample/avatars" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>