<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="#FED8B1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            tools:context=".tutorial.TutorialDetailActivity">

            <TextView
                android:id="@+id/tutorialDetailTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/tertiary"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/tutorialname"
                android:textColor="@color/text_primary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tutorialDetailContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/content_secondary"
                android:justificationMode="inter_word"
                android:paddingStart="8dp"
                android:paddingTop="5dp"
                android:paddingEnd="8dp"
                android:paddingBottom="5dp"
                android:text="@string/tutorial"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/tutorialDetailTitle"
                tools:layout_editor_absoluteX="36dp" />

            <ImageView
                android:id="@+id/tutorialDetailImage"
                android:layout_width="320dp"
                android:layout_height="207dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="36dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tutorialDetailContent"
                tools:srcCompat="@tools:sample/avatars" />

            <Button
                android:id="@+id/btnComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/secondary"
                android:text="@string/comment"
                app:icon="@drawable/ic_comment"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnLike"
                app:layout_constraintTop_toTopOf="@+id/btnLike"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tvUserEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/username"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tutorialDetailImage" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="28dp"
                android:text="@string/date"
                app:layout_constraintBottom_toBottomOf="@+id/tvUserEmail"
                app:layout_constraintEnd_toStartOf="@+id/tvTime"
                app:layout_constraintTop_toTopOf="@+id/tvUserEmail"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/time"
                app:layout_constraintBottom_toBottomOf="@+id/tvDate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvDate" />

            <TextView
                android:id="@+id/tvLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="30dp"
                android:text="totalLike"
                android:textColor="#3F51B5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvUserEmail" />

            <TextView
                android:id="@+id/tvTotalComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="1dp"
                android:text="totalComment"
                android:textColor="#3F51B5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLike" />

            <!--            <Button-->
            <!--                android:id="@+id/btnDeleteTutorialAdmin"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginTop="16dp"-->
            <!--                android:layout_marginBottom="16dp"-->
            <!--                android:backgroundTint="#FF0000"-->
            <!--                android:text="Delete"-->
            <!--                android:visibility="gone"-->
            <!--                app:layout_constraintBottom_toBottomOf="parent"-->
            <!--                app:layout_constraintEnd_toEndOf="parent"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
            <!--                app:layout_constraintTop_toBottomOf="@+id/textView33" />-->

            <!--            <Button-->
            <!--                android:id="@+id/btnCancelDeleteAdmin"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginTop="16dp"-->
            <!--                android:layout_marginBottom="16dp"-->
            <!--                android:backgroundTint="#03A9F4"-->
            <!--                android:text="Cancel Delete"-->
            <!--                android:visibility="gone"-->
            <!--                app:layout_constraintBottom_toBottomOf="parent"-->
            <!--                app:layout_constraintEnd_toEndOf="parent"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
            <!--                app:layout_constraintTop_toBottomOf="@+id/textView33" />-->

            <!--            <Button-->
            <!--                android:id="@+id/btnShareTutorial"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginStart="15dp"-->
            <!--                android:backgroundTint="#00BCD4"-->
            <!--                android:text="Share"-->
            <!--                app:icon="@drawable/ic_share"-->
            <!--                app:layout_constraintBottom_toBottomOf="@+id/btnComment"-->
            <!--                app:layout_constraintStart_toEndOf="@+id/btnComment"-->
            <!--                app:layout_constraintTop_toTopOf="@+id/btnComment"-->
            <!--                app:layout_constraintVertical_bias="0.0" />-->

            <TextView
                android:id="@+id/textView32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="like(s)"
                app:layout_constraintBottom_toBottomOf="@+id/tvLike"
                app:layout_constraintStart_toEndOf="@+id/tvLike"
                app:layout_constraintTop_toTopOf="@+id/tvLike"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="comment(s)"
                app:layout_constraintBottom_toBottomOf="@+id/tvTotalComment"
                app:layout_constraintStart_toEndOf="@+id/tvTotalComment"
                app:layout_constraintTop_toTopOf="@+id/tvTotalComment"
                app:layout_constraintVertical_bias="0.0" />

            <ImageButton
                android:id="@+id/btnLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/secondary"
                android:minHeight="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTotalComment"
                app:srcCompat="@drawable/ic_like"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/btnDisLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:minHeight="48dp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTotalComment"
                app:srcCompat="@drawable/ic_dislike" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>